2002-02-14  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* configure configure.in include/sane/config.h.in lib/Makefile.in
	  lib/inet_pton.c: Added wrapper for inet_pton(). If this function
	  is not available, try first inet_aton() and then inet_addr().
	* frontend/saned.c: Use inet_pton() instead of inet_aton() to avoid
	  compilation errors on e.g. OS/2.
	* include/Sane/sanei_debug.h: Added warnings for format problems
	  in DBG messages (from Frank Zago <fzago@greshamstorage.com>).
	* include/sane/sanei.h sanei/Makefile.in sanei/load_values.c
	  sanei/save_values.c: Removed load_values and save_values as they
	  are only used in sane_frontends.
	* backend/mustek.c backend/mustek_usb_low.c backend/mustek_usb_high.c
	  backend/net.c doc/mustek/mustek.CHANGES
	  doc/mustek_usb/mustek_usb.CHANGES sanei/sanei_usb.c: Fixed some
	  DBG format warnings.
	* lib/inet_ntop.c: Only use inet_ntoa if it's available.

2002-02-13  Peter Fales <peter@fales.com>

	* configure, acinclude.m4, aclocal.m4 - Another tweak to the
	  allowed gphoto2 version numbers
	
2002-02-13  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* configure configure.in Makefile.in backend/Makefile.in  
	  doc/Makefile.in frontend/Makefile.in include/Makefile.in
	  japi/Makefile.in lib/Makefile.in sanei/Makefile.in
	  tools/Makefile.in testsuite/Makefile.in po/Makefile.in: Added global
	  list of file patterns for "make distclean". Some "make clean"
	  and "make distclean" cleanup and additions.

2002-02-12  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* tools/sane-config.in: Avoid printing "-I/usr/include" as this
	  changes the default include order (from Tim Waugh
	  <twaugh@redhat.com>). Really check for entries in $cflags that
	  are also in $includedir.
	* frontend/saned.c: DNS queries for remote hosts are only done if
	  necessary. It's now possible to use "+" without hosts/DNS entries
	  for the connecting host.
	* TODO: Removed entries for config.h, OpenBSD shared libs, and -ansi 