@@ -1,3 +1,7 @@
+2002-02-14  Jochen Eisinger <jochen.eisinger@gmx.net>
+
+	* sanei/sanei_auth.h: remove strange line-ending handling code
+
 2002-02-14  Henning Meier-Geinitz <henning@meier-geinitz.de>
 
 	* configure configure.in include/sane/config.h.in lib/Makefile.in
